// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renderSwift matches the snapshot for multi-version.json 1`] = `
"// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer https://github.com/ht-sdks/events-sdk-swift v0.2.0 or later.

import Foundation
import Hightouch

// MARK: - TrackOrderCompletedV1
public struct TrackOrderCompletedV1: Codable {
    public let orderID: String?

    public enum CodingKeys: String, CodingKey {
        case orderID = "orderId"
    }

    public init(orderID: String?) {
        self.orderID = orderID
    }
}

// MARK: - TrackOrderCompletedV2
public struct TrackOrderCompletedV2: Codable {
    public let orderID: String?
    public let total: Double?

    public enum CodingKeys: String, CodingKey {
        case orderID = "orderId"
        case total = "total"
    }

    public init(orderID: String?, total: Double?) {
        self.orderID = orderID
        self.total = total
    }
}

fileprivate func cloneMap(_ map: [String: Any]) -> [String: Any] {
    var out: [String: Any] = [:]
    for (key, value) in map {
        out[key] = value
    }
    return out
}

fileprivate func setAtPath(_ root: [String: Any], _ path: [String], _ value: String) -> [String: Any] {
    if path.isEmpty {
        return root
    }
    if path.count == 1 {
        var clone = cloneMap(root)
        clone[path[0]] = value
        return clone
    }
    let key = path[0]
    let rest = Array(path.dropFirst())
    let child = root[key] as? [String: Any] ?? [:]
    var clone = cloneMap(root)
    clone[key] = setAtPath(child, rest, value)
    return clone
}

fileprivate func toMap<T: Encodable>(_ value: T) -> [String: Any] {
    guard let data = try? JSONEncoder().encode(value),
          let object = try? JSONSerialization.jsonObject(with: data),
          let map = object as? [String: Any]
    else {
        return [:]
    }
    return map
}

fileprivate func withSchemaVersion(
    _ data: [String: Any],
    _ extraContext: [String: Any]?,
    _ path: [String],
    _ version: String,
    _ envelopeKey: String
) -> (data: [String: Any], context: [String: Any]?) {
    if path.isEmpty {
        return (data, extraContext)
    }
    let head = path[0]
    let rest = Array(path.dropFirst())
    if head == envelopeKey {
        return (setAtPath(data, rest, version), extraContext)
    }
    if head == "context" {
        return (data, setAtPath(extraContext ?? [:], rest, version))
    }
    return (data, extraContext)
}

fileprivate func contextEnrichments(_ context: [String: Any]?) -> [EnrichmentClosure]? {
    guard let context = context, !context.isEmpty else {
        return nil
    }
    return [{ event in
        guard var working = event else { return event }
        var merged = working.context?.dictionaryValue ?? [:]
        for (key, value) in context {
            if var existing = merged[key] as? [String: Any],
               let incoming = value as? [String: Any] {
                existing.merge(incoming) { _, new in new }
                merged[key] = existing
            } else {
                merged[key] = value
            }
        }
        working.context = try? JSON(merged)
        return working
    }]
}

extension Analytics {
    fileprivate func emitTrack(name: String, data: [String: Any], context: [String: Any]?) {
        self.track(name: name, properties: data, enrichments: contextEnrichments(context))
    }

    fileprivate func emitScreen(title: String, data: [String: Any], context: [String: Any]?) {
        self.screen(title: title, properties: data, enrichments: contextEnrichments(context))
    }

    fileprivate func emitIdentify(userId: String?, traits: [String: Any], context: [String: Any]?) {
        let enrichments = contextEnrichments(context)
        if let userId = userId {
            self.identify(userId: userId, traits: traits, enrichments: enrichments)
        } else if let json = try? JSON(traits) {
            self.identify(traits: json, enrichments: enrichments)
        }
    }

    fileprivate func emitGroup(groupId: String, traits: [String: Any], context: [String: Any]?) {
        self.group(groupId: groupId, traits: traits, enrichments: contextEnrichments(context))
    }

    fileprivate func emitAlias(newId: String, context: [String: Any]?) {
        self.alias(newId: newId, enrichments: contextEnrichments(context))
    }
}

extension Analytics {
    public func trackOrderCompletedV1(_ properties: TrackOrderCompletedV1, context: [String: Any]? = nil) {
        let injected = withSchemaVersion(
            toMap(properties),
            context,
            [],
            "v1",
            "properties"
        )
        emitTrack(name: "Order Completed", data: injected.data, context: injected.context)
    }

    public func trackOrderCompletedV2(_ properties: TrackOrderCompletedV2, context: [String: Any]? = nil) {
        let injected = withSchemaVersion(
            toMap(properties),
            context,
            [],
            "v2",
            "properties"
        )
        emitTrack(name: "Order Completed", data: injected.data, context: injected.context)
    }

    public func trackOrderCompleted(_ properties: TrackOrderCompletedV2, context: [String: Any]? = nil) {
        trackOrderCompletedV2(properties, context: context)
    }
}
"
`;

exports[`renderSwift matches the snapshot for simple-track.json 1`] = `
"// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer https://github.com/ht-sdks/events-sdk-swift v0.2.0 or later.

import Foundation
import Hightouch

// MARK: - TrackOrderCompletedDefault
public struct TrackOrderCompletedDefault: Codable {
    public let orderID: String
    public let total: Double?

    public enum CodingKeys: String, CodingKey {
        case orderID = "orderId"
        case total = "total"
    }

    public init(orderID: String, total: Double?) {
        self.orderID = orderID
        self.total = total
    }
}

fileprivate func cloneMap(_ map: [String: Any]) -> [String: Any] {
    var out: [String: Any] = [:]
    for (key, value) in map {
        out[key] = value
    }
    return out
}

fileprivate func setAtPath(_ root: [String: Any], _ path: [String], _ value: String) -> [String: Any] {
    if path.isEmpty {
        return root
    }
    if path.count == 1 {
        var clone = cloneMap(root)
        clone[path[0]] = value
        return clone
    }
    let key = path[0]
    let rest = Array(path.dropFirst())
    let child = root[key] as? [String: Any] ?? [:]
    var clone = cloneMap(root)
    clone[key] = setAtPath(child, rest, value)
    return clone
}

fileprivate func toMap<T: Encodable>(_ value: T) -> [String: Any] {
    guard let data = try? JSONEncoder().encode(value),
          let object = try? JSONSerialization.jsonObject(with: data),
          let map = object as? [String: Any]
    else {
        return [:]
    }
    return map
}

fileprivate func withSchemaVersion(
    _ data: [String: Any],
    _ extraContext: [String: Any]?,
    _ path: [String],
    _ version: String,
    _ envelopeKey: String
) -> (data: [String: Any], context: [String: Any]?) {
    if path.isEmpty {
        return (data, extraContext)
    }
    let head = path[0]
    let rest = Array(path.dropFirst())
    if head == envelopeKey {
        return (setAtPath(data, rest, version), extraContext)
    }
    if head == "context" {
        return (data, setAtPath(extraContext ?? [:], rest, version))
    }
    return (data, extraContext)
}

fileprivate func contextEnrichments(_ context: [String: Any]?) -> [EnrichmentClosure]? {
    guard let context = context, !context.isEmpty else {
        return nil
    }
    return [{ event in
        guard var working = event else { return event }
        var merged = working.context?.dictionaryValue ?? [:]
        for (key, value) in context {
            if var existing = merged[key] as? [String: Any],
               let incoming = value as? [String: Any] {
                existing.merge(incoming) { _, new in new }
                merged[key] = existing
            } else {
                merged[key] = value
            }
        }
        working.context = try? JSON(merged)
        return working
    }]
}

extension Analytics {
    fileprivate func emitTrack(name: String, data: [String: Any], context: [String: Any]?) {
        self.track(name: name, properties: data, enrichments: contextEnrichments(context))
    }

    fileprivate func emitScreen(title: String, data: [String: Any], context: [String: Any]?) {
        self.screen(title: title, properties: data, enrichments: contextEnrichments(context))
    }

    fileprivate func emitIdentify(userId: String?, traits: [String: Any], context: [String: Any]?) {
        let enrichments = contextEnrichments(context)
        if let userId = userId {
            self.identify(userId: userId, traits: traits, enrichments: enrichments)
        } else if let json = try? JSON(traits) {
            self.identify(traits: json, enrichments: enrichments)
        }
    }

    fileprivate func emitGroup(groupId: String, traits: [String: Any], context: [String: Any]?) {
        self.group(groupId: groupId, traits: traits, enrichments: contextEnrichments(context))
    }

    fileprivate func emitAlias(newId: String, context: [String: Any]?) {
        self.alias(newId: newId, enrichments: contextEnrichments(context))
    }
}

extension Analytics {
    public func trackOrderCompletedDefault(_ properties: TrackOrderCompletedDefault, context: [String: Any]? = nil) {
        let injected = withSchemaVersion(
            toMap(properties),
            context,
            ["context", "protocols", "schemaVersion"],
            "default",
            "properties"
        )
        emitTrack(name: "Order Completed", data: injected.data, context: injected.context)
    }

    public func trackOrderCompleted(_ properties: TrackOrderCompletedDefault, context: [String: Any]? = nil) {
        trackOrderCompletedDefault(properties, context: context)
    }
}
"
`;

exports[`renderSwift matches the snapshot for with-refs.json 1`] = `
"// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer https://github.com/ht-sdks/events-sdk-swift v0.2.0 or later.

import Foundation
import Hightouch

// MARK: - IdentifyDefault
public struct IdentifyDefault: Codable {
    public let email: String?

    public enum CodingKeys: String, CodingKey {
        case email = "email"
    }

    public init(email: String?) {
        self.email = email
    }
}

// MARK: - TrackCartViewedDefault
public struct TrackCartViewedDefault: Codable {
    public let amount: Double
    public let currency: String
    public let itemCount: Double?

    public enum CodingKeys: String, CodingKey {
        case amount = "amount"
        case currency = "currency"
        case itemCount = "itemCount"
    }

    public init(amount: Double, currency: String, itemCount: Double?) {
        self.amount = amount
        self.currency = currency
        self.itemCount = itemCount
    }
}

fileprivate func cloneMap(_ map: [String: Any]) -> [String: Any] {
    var out: [String: Any] = [:]
    for (key, value) in map {
        out[key] = value
    }
    return out
}

fileprivate func setAtPath(_ root: [String: Any], _ path: [String], _ value: String) -> [String: Any] {
    if path.isEmpty {
        return root
    }
    if path.count == 1 {
        var clone = cloneMap(root)
        clone[path[0]] = value
        return clone
    }
    let key = path[0]
    let rest = Array(path.dropFirst())
    let child = root[key] as? [String: Any] ?? [:]
    var clone = cloneMap(root)
    clone[key] = setAtPath(child, rest, value)
    return clone
}

fileprivate func toMap<T: Encodable>(_ value: T) -> [String: Any] {
    guard let data = try? JSONEncoder().encode(value),
          let object = try? JSONSerialization.jsonObject(with: data),
          let map = object as? [String: Any]
    else {
        return [:]
    }
    return map
}

fileprivate func withSchemaVersion(
    _ data: [String: Any],
    _ extraContext: [String: Any]?,
    _ path: [String],
    _ version: String,
    _ envelopeKey: String
) -> (data: [String: Any], context: [String: Any]?) {
    if path.isEmpty {
        return (data, extraContext)
    }
    let head = path[0]
    let rest = Array(path.dropFirst())
    if head == envelopeKey {
        return (setAtPath(data, rest, version), extraContext)
    }
    if head == "context" {
        return (data, setAtPath(extraContext ?? [:], rest, version))
    }
    return (data, extraContext)
}

fileprivate func contextEnrichments(_ context: [String: Any]?) -> [EnrichmentClosure]? {
    guard let context = context, !context.isEmpty else {
        return nil
    }
    return [{ event in
        guard var working = event else { return event }
        var merged = working.context?.dictionaryValue ?? [:]
        for (key, value) in context {
            if var existing = merged[key] as? [String: Any],
               let incoming = value as? [String: Any] {
                existing.merge(incoming) { _, new in new }
                merged[key] = existing
            } else {
                merged[key] = value
            }
        }
        working.context = try? JSON(merged)
        return working
    }]
}

extension Analytics {
    fileprivate func emitTrack(name: String, data: [String: Any], context: [String: Any]?) {
        self.track(name: name, properties: data, enrichments: contextEnrichments(context))
    }

    fileprivate func emitScreen(title: String, data: [String: Any], context: [String: Any]?) {
        self.screen(title: title, properties: data, enrichments: contextEnrichments(context))
    }

    fileprivate func emitIdentify(userId: String?, traits: [String: Any], context: [String: Any]?) {
        let enrichments = contextEnrichments(context)
        if let userId = userId {
            self.identify(userId: userId, traits: traits, enrichments: enrichments)
        } else if let json = try? JSON(traits) {
            self.identify(traits: json, enrichments: enrichments)
        }
    }

    fileprivate func emitGroup(groupId: String, traits: [String: Any], context: [String: Any]?) {
        self.group(groupId: groupId, traits: traits, enrichments: contextEnrichments(context))
    }

    fileprivate func emitAlias(newId: String, context: [String: Any]?) {
        self.alias(newId: newId, enrichments: contextEnrichments(context))
    }
}

extension Analytics {
    public func identifyDefault(_ traits: IdentifyDefault, context: [String: Any]? = nil) {
        let injected = withSchemaVersion(
            toMap(traits),
            context,
            [],
            "default",
            "traits"
        )
        emitIdentify(userId: nil, traits: injected.data, context: injected.context)
    }

    public func identifyDefault(userId: String, traits: IdentifyDefault, context: [String: Any]? = nil) {
        let injected = withSchemaVersion(
            toMap(traits),
            context,
            [],
            "default",
            "traits"
        )
        emitIdentify(userId: userId, traits: injected.data, context: injected.context)
    }

    public func identify(_ traits: IdentifyDefault, context: [String: Any]? = nil) {
        identifyDefault(traits, context: context)
    }

    public func identify(userId: String, traits: IdentifyDefault, context: [String: Any]? = nil) {
        identifyDefault(userId: userId, traits: traits, context: context)
    }

    public func trackCartViewedDefault(_ properties: TrackCartViewedDefault, context: [String: Any]? = nil) {
        let injected = withSchemaVersion(
            toMap(properties),
            context,
            [],
            "default",
            "properties"
        )
        emitTrack(name: "Cart Viewed", data: injected.data, context: injected.context)
    }

    public func trackCartViewed(_ properties: TrackCartViewedDefault, context: [String: Any]? = nil) {
        trackCartViewedDefault(properties, context: context)
    }
}
"
`;
